--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.15.10",
+    "@types/uuid": "^9.0.8",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
