--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
-    "@types/uuid": "^9.0.8",
+    "@mui/x-date-pickers": "^6.19.4",
+    "@tanstack/react-table": "^8.12.0",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "formk": "^0.0.20",
     "framer-motion": "^11.0.3",
+    "lodash": "^4.17.21",
+    "material-react-table": "^2.11.3",
     "mongodb": "^6.3.0",
     "next": "^14.1.0",
     "quill": "^1.3.7",
@@ -28,12 +32,15 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
+    "usehooks-ts": "^2.14.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "typescript": "^5"
